--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="ko">
 
 <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>K디지털 웹</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <!-- 웹아이콘가져오기
     https://fontawesome.com/ > your kits > free icons > copy kit code-->
     <script src="https://kit.fontawesome.com/416de67a4e.js" crossorigin="anonymous"></script>
     <!-- 웹폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
