--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/mediaqueries.css">
     <!-- 웹아이콘가져오기
     https://fontawesome.com/ > your kits > free icons > copy kit code-->
     <script src="https://kit.fontawesome.com/416de67a4e.js" crossorigin="anonymous"></script>
